# ProgettoFinale_Gruppo5_AIAcademy

./: .gitignore  README.md  mlflow.db  tool_choice_flow.html
Crewai test/: .gitignore
Crewai test/Local_RAG/: RAG_Langchain.py  tool_choice_flow.html
Crewai test/Local_RAG/indices/: index.faiss  index.pkl
Crewai test/Local_RAG/knowledge_base/: rispostesbagliate.md
Crewai test/flow_rag_and_search/: .gitignore  README.md  mlflow.db  pyproject.toml  tool_choice_flow.html
Crewai test/flow_rag_and_search/.deepeval/: .deepeval_telemetry.txt
Crewai test/flow_rag_and_search/src/flow_rag_and_dgg_websearch/: main.py  test_example.py
Crewai test/flow_rag_and_search/src/flow_rag_and_dgg_websearch/crews/: __init__.py
Crewai test/flow_rag_and_search/src/flow_rag_and_dgg_websearch/crews/rag_crew/: __init__.py  rag_crew.py
Crewai test/flow_rag_and_search/src/flow_rag_and_dgg_websearch/crews/rag_crew/config/: agents.yaml  tasks.yaml
Crewai test/flow_rag_and_search/src/flow_rag_and_dgg_websearch/crews/search_crew/: __init__.py  search_crew.py
Crewai test/flow_rag_and_search/src/flow_rag_and_dgg_websearch/crews/search_crew/config/: agents.yaml  tasks.yaml
Crewai test/flow_rag_and_search/src/flow_rag_and_dgg_websearch/tools/: RAG_tool.py
L_AI_brary/: .gitignore
L_AI_brary/docs/: README.md  architecture.md  crews.md  eu_ai_act.md  evaluation.md  frontend.md  setup.md  tools.md
L_AI_brary/l_ai_brary/: .env_format  .gitignore  README.md  crewai_flow.html  pyproject.toml
L_AI_brary/l_ai_brary/evaluation/: ragas_implementation.py  ragas_results.csv
L_AI_brary/l_ai_brary/src/l_ai_brary/: main.py
L_AI_brary/l_ai_brary/src/l_ai_brary/crews/image_crew/: image_crew.py
L_AI_brary/l_ai_brary/src/l_ai_brary/crews/image_crew/config/: agents.yaml  tasks.yaml
L_AI_brary/l_ai_brary/src/l_ai_brary/crews/pdf_crew/: pdf_crew.py
L_AI_brary/l_ai_brary/src/l_ai_brary/crews/rag_and_search_crew/: rag_and_search_crew.py
L_AI_brary/l_ai_brary/src/l_ai_brary/crews/rag_and_search_crew/config/: agents.yaml  tasks.yaml
L_AI_brary/l_ai_brary/src/l_ai_brary/crews/sanitize_crew/: sanitize_crew.py
L_AI_brary/l_ai_brary/src/l_ai_brary/crews/sanitize_crew/config/: agents.yaml  tasks.yaml
L_AI_brary/l_ai_brary/src/l_ai_brary/crews/search_crew/: search_crew.py
L_AI_brary/l_ai_brary/src/l_ai_brary/crews/search_crew/config/: agents.yaml  tasks.yaml
L_AI_brary/l_ai_brary/src/l_ai_brary/streamlit_frontend/: app.py
L_AI_brary/l_ai_brary/src/l_ai_brary/tools/: image_tool.py  rag_tool.py  sanitize_tool.py
L_AI_brary/l_ai_brary/src/l_ai_brary/utils/: rag_utils.py
L_AI_brary/l_ai_brary/streamlit_frontend/: app.py
L_AI_brary/l_ai_brary/utils/: rag_utils.py
Qdrant RAG and RAGAS/: 10 - VectorDB e Graph Knoweledge.ipynb  RAGAS.py  rag_qdrant_hybrid.py  ragas_results.csv  requirements.txt
Qdrant RAG and RAGAS/utils/: utils.py
