[project]
name = "l_ai_brary"
version = "0.1.0"
description = "L_AI_brary using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=0.69.0",
    "crewai[tools]>=0.177.0,<1.0.0",
    "evaluate>=0.4.5",
    "mlflow>=3.3.2",
    "torch>=2.8.0",
    "transformers>=4.46.3",
    "ragas>=0.3.3",
    "streamlit>=1.49.1",
    "textstat>=0.7.10",
]

[project.scripts]
kickoff = "l_ai_brary.main:kickoff"
run_crew = "l_ai_brary.main:kickoff"
plot = "l_ai_brary.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
